welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:11: error: not found: type yellow
	setCouleurBrosse(Color:yellow)
                               ^FlowerPot:18: error: not found: type red
	Fleur(Color:red)
                    ^FlowerPot:20: error: not found: type CYAN
	Fleur(Color:CYAN)
                    ^FlowerPot:25: error: not found: type ORANGE
	Fleur(Color:ORANGE)
                    ^FlowerPot:30: error: not found: type PINK
	Fleur(Color:PINK)
                    ^FlowerPot:32: error: not found: type GREEN
	Fleur(Color:GREEN)
                    ^