welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def Fleur(c:Color) {
	setCouleurBrosse(c)
	baisseBrosse()
	avance();avance()
	recule()
	gauche()
	avance()
	recule();recule()
	avance()
	setCouleurBrosse(Color:yellow)
	leveBrosse()
	droite()
	recule()
	}

def growFlowers() {
	Fleur(Color:red)
	for (i<-1 to 4) avance()
	Fleur(Color:CYAN)
	for (i<-1 to 4) recule()
	droite()
	avance();avance()
	gauche()
	Fleur(Color:ORANGE)
	for (i<-1 to 4) recule()
	droite()
	avance();avance()
	gauche()
	Fleur(Color:PINK)
	for (i<-1 to 4) avance()
	Fleur(Color:GREEN)
}
